node-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: prys/mynode
        ports:
        - containerPort: 3412
        volumeMounts:
        - name: nodedir
          mountPath: /node
        command: ["node", "/node/basic-api.js"]
      # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
      - name: nodedir
        emptyDir: {}


#apiVersion: extensions/v1beta1
