node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
  labels:
    app: node
spec:
  ports:
  - port: 3412
    targetPort: 3412
    protocol: TCP
    name: http
  selector:
    app: node
