node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /quote
        backend:
          serviceName: nodeapi-svc
          servicePort: 3412
